test/domains/compilerErrors/constDomain8.chpl
var d: domain(int) = {1..10};
forall i in 1..2 do
  d.remove(i);
